# pudink

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  client.py  mypy.ini  pudink.spec  pyproject.toml  requirements.txt
.github/: pre-build.yml
.github/workflows/: pre-build.yml
client/: __init__.py  pudink.py
client/controller/: base_controller.py  menu_controller.py  title_controller.py  world_controller.py
client/frontend/: asset_manager.py  password_text_entry.py  player_display.py  scene_manager.py
client/game/: client.py  client_factory.py  pudink_game.py  world_state.py
client/renderer/: base_renderer.py  menu_renderer.py  title_renderer.py  world_renderer.py
common/: translator.py
server/: __main__.py
server/database/: connector.py
server/handler/: dispatcher.py  handler.py
server/handler/handlers/: connected_handler.py  disconnected_handler.py
server/protocol/: pudink_connection.py  pudink_server.py  pudink_server_runner.py
src/pudink/: LoginScreen.py  __main__.py  reactor.py  simpleclient.py  test.py  window.py
src/pudink/client/: __main__.py  asset_manager.py  asset_mapping.py  game.py  simpleclient.py
src/pudink/client/controller/: base_controller.py  login_controller.py  menu_controller.py  title_controller.py  (+1 more)
src/pudink/common/: model.py  translator.py
src/pudink/frontend/: scene.py  scene_manager.py
src/pudink/old/: Game_1.py  HelloWorldScreen.py  game.py  gameloop.py  login.py  utility.py
src/pudink/server/: __main__.py  pudink_server_runner.py  server.py
tests/: example_test.py
(+44 files in other folders)
