[project]
name = "pudink"
version = "0.1.0"
description = "Cozy and casual social game in Python."
authors = [
    {name = "tino", email = "kpetras@tutanota.com"},
]
dependencies = [
    "pyglet>=2.0.14",
    "twisted>=24.3.0",
]
requires-python = "<3.13,>=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.1.1",
    "flake8>=7.0.0",
    "black>=24.3.0",
    "mypy>=1.9.0",
    "isort>=5.13.2",
    "pre-commit>=3.7.0",
    "pyinstaller>=6.5.0",
]
